ADDED parent activity attribute for weather detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.WeatherDetail"></activity>
+        <activity android:name=".activities.WeatherDetailActivity"
+            android:parentActivityName=".activities.MainActivity"/>
     </application>
 
 </manifest>
